--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,32 @@
+@import url("https://fonts.googleapis.com/css2?family=Rubik:wght@300;400;500;600;700&display=swap");
+
+*,
+html,
+body {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
+/* background color
+background-image: linear-gradient(rgba(0, 0, 0, 0.6), #121212);
+background-color: rgb(24, 152, 160);
+background-color: rgb(208, 40, 56);
+background-color: rgb(208, 96, 139);
+background-color: rgb(0, 184, 96); */
 .App {
-  font-family: sans-serif;
+  font-family: "Rubik", sans-serif;
   text-align: center;
 }
+.content {
+  height: 100vh;
+  width: 100%;
+  margin-left: 250px;
+  background-image: linear-gradient(rgba(0, 0, 0, 0.7), #121212);
+  background-color: rgb(24, 152, 160);
+}
+
+/* 
+Organizer color: rgb(233, 30, 99)
+Admins color: rgb(230, 126, 34)
+Participants color: rgb(52, 152, 219) */
