--- a/src/styles.css
+++ b/src/styles.css
@@ -1,5 +1,12 @@
 @import url("https://fonts.googleapis.com/css2?family=Rubik:wght@300;400;500;600;700&display=swap");
 
+:root {
+  --blue: #3498db;
+  --dark-grey: #72767d;
+  --light-grey: #dcddde;
+  --dark-black: #121212;
+}
+
 *,
 html,
 body {
@@ -16,13 +23,12 @@ background-color: rgb(208, 96, 139);
 background-color: rgb(0, 184, 96); */
 .App {
   font-family: "Rubik", sans-serif;
-  text-align: center;
   color: #fff;
 }
 .content {
   height: 100vh;
   margin-left: 250px;
-  background-image: linear-gradient(rgba(0, 0, 0, 0.7), #121212);
+  background-image: linear-gradient(rgba(0, 0, 0, 0.7), var(--dark-black));
   background-color: rgb(24, 152, 160);
 }
 
