chore: designed members-list

--- a/src/components/Chatroom/ChatSection/chatsection.css
+++ b/src/components/Chatroom/ChatSection/chatsection.css
@@ -18,7 +18,7 @@
     align-items: center;
     padding: 0 15px;
     height: 50px;
-    background-color: #000;
+    background-color: rgba(0,0,0,0.7);
 }
 .Chat-title{
     font-size: 16px;
