--- a/src/components/Chatroom/ChatParticipants/chatparticipants.css
+++ b/src/components/Chatroom/ChatParticipants/chatparticipants.css
@@ -32,3 +32,18 @@
     width: 30px;
     font-size: 15px;
 }
+.member-list-icons {
+    font-size: 30px;
+    margin-right: 15px;
+    cursor: pointer;
+}
+.hand-icon{
+    color: #da9f60;
+}
+.add-icon {
+    font-size: 35px;
+    color: #00b300;
+}
+.minus-icon {
+    color: #f71900;
+}
