--- a/src/components/Home/home.css
+++ b/src/components/Home/home.css
@@ -2,7 +2,12 @@
   height: 100vh;
   padding: 1rem;
 }
-
+.chatroom-subtitle {
+  font-size: 32px;
+  font-weight: 700;
+  line-height: 36px;
+  letter-spacing: 1.5px;
+}
 .card-collection-container {
   width: 100%;
   display: flex;
