--- a/src/styles.css
+++ b/src/styles.css
@@ -35,3 +35,8 @@ background-color: rgb(0, 184, 96); */
   background-color: rgb(24, 152, 160);
 }
 
+@media (max-width: 850px) {
+  .content{
+    margin-left: 0;
+  }
+}
