--- a/src/components/Home/home.css
+++ b/src/components/Home/home.css
@@ -3,10 +3,11 @@
   padding: 1rem;
 }
 .chatroom-subtitle {
-  font-size: 32px;
-  font-weight: 700;
-  line-height: 36px;
-  letter-spacing: 1.5px;
+  font-size: 24px;
+  font-weight: 600;
+  letter-spacing: -.04em;
+  line-height: 28px;
+  text-transform: none;
 }
 .card-collection-container {
   width: 100%;
