--- a/src/components/Chatroom/ChatSection/ChatInput/chatinput.css
+++ b/src/components/Chatroom/ChatSection/ChatInput/chatinput.css
@@ -1,45 +1,51 @@
 .chat-input-container {
-    position: sticky;
-    width: 100%;
-    bottom: 0;
-    background-color: var(--dark-black);
+  position: sticky;
+  width: 100%;
+  bottom: 0;
+  background-color: var(--dark-black);
 }
 .chat-input-form {
-    height: 65px;
-    padding: 10px 15px 15px 15px;
+  height: 65px;
+  padding: 10px 15px 15px 15px;
 }
 .input-group {
-    display: flex;
-    min-width: 100%;
-    background-color: #28292b;
-    height: 45px;
-    border-radius: 5px;
-    padding-top: 11px;
-    padding-bottom: 11px;
+  display: flex;
+  min-width: 100%;
+  background-color: #28292b;
+  height: 45px;
+  border-radius: 5px;
+  padding-top: 11px;
+  padding-bottom: 11px;
 }
 .chat-input {
-    width: 100%;
-    background-color: #28292b;
-    border: none;
-    padding: 5px 15px;
-    outline: transparent;
-    color: #fff;
+  width: 100%;
+  background-color: #28292b;
+  border: none;
+  padding: 5px 15px;
+  outline: transparent;
+  color: #fff;
 }
 .chat-input::placeholder {
-    color: var(--dark-grey)
+  color: var(--dark-grey);
 }
 .chat-send-btn {
-    background-color: transparent;
-    border: none;
-    flex: 1;
-    margin-right: 10px;
-    cursor: pointer;
+  background-color: transparent;
+  border: none;
+  flex: 1;
+  margin-right: 10px;
+  cursor: pointer;
 }
 .input-group-icon {
-    color: var(--dark-grey);
-    font-size: 20px;
-    transition: color 0.4s;
+  color: var(--dark-grey);
+  font-size: 20px;
+  transition: color 0.4s;
 }
 .input-group-icon:hover {
-    color: #fff;
+  color: #fff;
+}
+
+.emoji-button {
+  cursor: pointer;
+  font-size: 1.5rem;
+  margin-left: 0.8rem;
 }
