--- a/src/components/Header/header.css
+++ b/src/components/Header/header.css
@@ -1,7 +1,7 @@
 .Header {
     display: flex;
     width: 100%;
-    height: 60px;
+    height: 65px;
     background-color: var(--dark-black);
     align-items: center;
 }
@@ -10,7 +10,8 @@
     flex-direction: row;
     align-items: center;
     height: 100%;
-    padding: 0 24px;
+    padding: 0 10px;
+    display: none;
   }
 .Header-Brand-logo {
     color: black;
@@ -43,8 +44,21 @@
     font-size: 15px;
     font-weight: 400;
 }
-@media (max-width: 850px) {
+.Navbar-toggler {
+    cursor: pointer;
+    z-index: 999;
+    margin-left: 20px;
+    display: none;
+}
+.toggler-icon {
+    color: #fff;
+    font-size: 30px;
+}
+@media (max-width: 768px) {
     .Header-Brand-container {
-        margin-left: 40px;
+        display: flex;
+    }
+    .Navbar-toggler{
+        display: inline-block;
     }
 }
