--- a/src/components/ChatroomForm/chatroom-form.css
+++ b/src/components/ChatroomForm/chatroom-form.css
@@ -3,7 +3,6 @@
   justify-content: center;
   align-items: center;
   height: calc(100vh - 5rem);
-  margin-top: 80px;
 }
 
 .chatroom-form {
@@ -66,4 +65,10 @@ textarea {
   margin-bottom: 0.5rem !important;
   font-size: 0.7rem;
   border-radius: 0.3rem;
+}
+
+@media (max-width: 768px){
+  .form-container {
+    margin-top: 80px;
+  }
 }
