--- a/src/components/Home/home.css
+++ b/src/components/Home/home.css
@@ -1,6 +1,7 @@
 .home {
   height: 100vh;
   padding: 1rem;
+  overflow-y: scroll;
 }
 .chatroom-subtitle {
   font-size: 24px;
@@ -14,4 +15,16 @@
   display: flex;
   flex-wrap: wrap;
   margin: 1rem 0rem;
+}
+.home::-webkit-scrollbar {
+  width: 3px;
+}
+
+.home::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+}
+
+.home::-webkit-scrollbar-thumb {
+  background-color: #000;
+  outline: 1px solid #000;
 }
