--- a/src/components/ChatroomCard/chatroom-card.css
+++ b/src/components/ChatroomCard/chatroom-card.css
@@ -8,7 +8,7 @@
   text-decoration: none;
   background-color: #ffffff1a;
   border-radius: 1rem;
-  margin: 0 0.5rem;
+  margin: 0.5rem   0.5rem;
   transition: background-color 0.4s;
 }
 .chatroom-card:hover {
