--- a/src/components/Auth/auth.css
+++ b/src/components/Auth/auth.css
@@ -1,11 +1,102 @@
-.Form-container {
-  height: 100%;
+.Auth {
+  height: 100vh;
   width: 100%;
+  background: linear-gradient(-45deg, #673ab7, #9c27b0);
+}
+
+.Form-container {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%,-50%);
   display: flex;
+  flex-direction: row;
+  min-width: 700px;
+  padding: 32px;
+  box-shadow:  2px 10px 0 rgb(0 0 0 / 20%);
+  border-radius: 10px;
   justify-content: center;
   align-items: center;
+  background: #36393f;
 }
 .Form {
   display: flex;
   flex-direction: column;
+}
+.Form-welcome {
+    display: flex;
+    align-items: center;
+    font-size: 24px;
+    line-height: 30px;
+    font-weight: 500;
+    margin-bottom: 6px;
+}
+.Form-welcome-subtext {
+    font-size: 16px;
+    line-height: 20px;
+    color: #b9bbbe;
+    font-weight: 400;
+    margin-bottom: 20px;
+}
+.Form-container label {
+  color: #8e9297;
+  text-transform: uppercase;
+  margin-bottom: 8px;
+  font-size: 12px;
+  line-height: 16px;
+  font-weight: 600;
+}
+.Form-container-left {
+  padding: 0 10px;
+}
+.input-box {
+  width: 400px;
+  height: 40px;
+  padding: 10px;
+  border: none;
+  outline: transparent;
+  background: #303339;
+  font-size: 16px;
+  color: #dcddde;
+  border-radius: 3px;
+  margin-bottom: 15px;
+}
+.Form-container-right {
+  display: flex;
+  flex-direction: column;
+  padding: 10px;
+}
+.Auth-form-button {
+  font-size: 14px;
+  border: none;
+  text-transform: uppercase;
+  padding: 10px 15px;
+  font-weight: 600;
+  display: flex;
+  margin-bottom: 20px;
+  margin-top: 10px;
+  color: #fff;
+  border: none;
+  background-color: #7289da;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+  transition: all .4s;
+}
+.Auth-form-button:hover {
+  background-color: #4161d3;
+}
+.button-signin {
+  margin-top: 10px;
+  color: #fff;
+  border: none;
+  background-color: #7289da;
+  transition: all .4s;
+}
+.button-signin:hover {
+  background-color: #4161d3;
+}
+.google-icon {
+  margin-left: 5px;
+  font-size: 25px;
 }
