--- a/src/components/Auth/auth.css
+++ b/src/components/Auth/auth.css
@@ -65,6 +65,7 @@
   display: flex;
   flex-direction: column;
   padding: 10px;
+  width: 100%;
 }
 .Auth-form-button {
   font-size: 14px;
@@ -81,22 +82,20 @@
   justify-content: center;
   align-items: center;
   cursor: pointer;
+  border-radius: 4px;
   transition: all .4s;
 }
 .Auth-form-button:hover {
   background-color: #4161d3;
 }
-.button-signin {
-  margin-top: 10px;
-  color: #fff;
-  border: none;
-  background-color: #7289da;
-  transition: all .4s;
-}
-.button-signin:hover {
-  background-color: #4161d3;
-}
 .google-icon {
   margin-left: 5px;
   font-size: 25px;
+}
+
+@media (max-width: 786px){
+  .Form-container{
+    flex-direction: column;
+    min-width: 300px;
+  }
 }
