--- a/src/components/Chatroom/ChatSection/chatsection.css
+++ b/src/components/Chatroom/ChatSection/chatsection.css
@@ -10,6 +10,7 @@
   position: sticky;
   top: 0;
   width: 100%;
+  z-index: 999;
 }
 .Chat-header div {
   height: 50px;
@@ -34,6 +35,7 @@
   overflow-y: scroll;
   padding-bottom: 20px;
 }
+
 .Messages-container::-webkit-scrollbar {
   width: 3px;
 }
@@ -46,9 +48,13 @@
   background-color: #000;
   outline: 1px solid #000;
 }
-
+.Chat-header .toggler-icon {
+  opacity: 0;
+  visibility: hidden;
+}
 @media (max-width: 768px) {
-  /* .Chat-header div {
-    margin-left: 2.5rem;
-  } */
+  .Chat-header .toggler-icon {
+    opacity: 1;
+    visibility: visible;
+  }
 }
